Added Header Styles

--- a/index.html
+++ b/index.html
@@ -11,50 +11,54 @@
       <nav>
         <ul>
           <li>
-            <a href="https://www.apple.com/">
+            <a href="https://www.apple.com/" target="_blank">
               <img
                 src="https://www.apple.com/ac/globalnav/7/en_US/images/be15095f-5a20-57d0-ad14-cf4c638e223a/globalnav_apple_image__b5er5ngrzxqq_large.svg"
                 alt="Apple logo"
             /></a>
           </li>
           <li>
-            <a href="https://www.apple.com/store">Store</a>
+            <a href="https://www.apple.com/store" target="_blank">Store</a>
           </li>
           <li>
-            <a href="https://www.apple.com/mac/">Mac</a>
+            <a href="https://www.apple.com/mac/" target="_blank">Mac</a>
           </li>
           <li>
-            <a href="https://www.apple.com/ipad/">iPad</a>
+            <a href="https://www.apple.com/ipad/" target="_blank">iPad</a>
           </li>
           <li>
-            <a href="https://www.apple.com/iphone/">iPhone</a>
+            <a href="https://www.apple.com/iphone/" target="_blank">iPhone</a>
           </li>
           <li>
-            <a href="https://www.apple.com/watch/">Watch</a>
+            <a href="https://www.apple.com/watch/" target="_blank">Watch</a>
           </li>
           <li>
-            <a href="https://www.apple.com/airpods/">AirPods</a>
+            <a href="https://www.apple.com/airpods/" target="_blank">AirPods</a>
           </li>
           <li>
-            <a href="https://www.apple.com/tv-home/">TV & Home</a>
+            <a href="https://www.apple.com/tv-home/" target="_blank"
+              >TV & Home</a
+            >
           </li>
           <li>
-            <a href="https://www.apple.com/services/"> Only on Apple</a>
+            <a href="https://www.apple.com/services/" target="_blank">
+              Only on Apple</a
+            >
           </li>
           <li>
-            <a href="https://www.apple.com/shop/accessories/all">
+            <a
+              href="https://www.apple.com/shop/accessories/all"
+              target="_blank"
+            >
               Accessories</a
             >
           </li>
           <li>
-            <a href="https://support.apple.com/">Support</a>
+            <a href="https://support.apple.com/" target="_blank">Support</a>
           </li>
           <li>
             <a>
-              <img
-                src="https://www.apple.com/ac/globalnav/7/en_US/images/be15095f-5a20-57d0-ad14-cf4c638e223a/globalnav_search_image__cbllq1gkias2_large.svg"
-                alt="Search logo"
-              />
+              <img src="./images/search-icon.png" alt="Search logo" />
             </a>
           </li>
           <li>
@@ -68,6 +72,11 @@
         </ul>
       </nav>
     </header>
+    <p class="shop-online">
+      Shop online and get Specialist help, free delivery, and more. Some of our
+      stores are offering limited services. Before you visit, please check your
+      store’s services
+    </p>
 
     <main>
       <section class="homepage-section">
