Section iPhone 13 Pro and iPhone 13 added

--- a/index.html
+++ b/index.html
@@ -72,17 +72,32 @@
         </ul>
       </nav>
     </header>
-    <p class="shop-online">
-      Shop online and get Specialist help, free delivery, and more. Some of our
-      stores are offering limited services. Before you visit, please check your
-      store’s services
-    </p>
 
     <main>
-      <section class="homepage-section">
-        <div class="iphone-13-pro"></div>
-        <div class="iphone-13"></div>
-        <div class="valentines-day"></div>
+      <div class="shop-div">
+        <p class="shop-online">
+          Shop online and get Specialist help, free delivery, and more. Some of
+          our stores are offering limited services. Before you visit, please
+          check your store’s services
+        </p>
+      </div>
+
+      <section class="full-width-section iphone-13-pro">
+        <h1>iPhone 13 Pro</h1>
+        <h2>Oh. So. Pro</h2>
+        <div>
+          <a href="">Learn More</a>
+          <a href="">Buy</a>
+        </div>
+      </section>
+      
+      <section class="full-width-section iphone-13">
+        <h1>iPhone 13 </h1>
+        <h2>Your new superpower</h2>
+        <div>
+          <a href="">Learn More</a>
+          <a href="">Buy</a>
+        </div>
       </section>
     </main>
   </body>
