Added Multi section

--- a/index.html
+++ b/index.html
@@ -108,6 +108,69 @@
           <a href="">Shop</a>
         </div>
       </section>
+
+      <section class="multi">
+        <article class="watch">
+          <span>New</span>
+          <h4>Watch</h4>
+          <span>Series 7</span>
+          <h5>Introducing our largest display yet.</h5>
+          <div>
+            <a href="">Learn More</a>
+            <a href="">Buy</a>
+          </div>
+        </article>
+        <article class="shot">
+          <span>New</span>
+          <h4>Watch</h4>
+          <span>Series 7</span>
+          <h5>Introducing our largest display yet.</h5>
+          <div>
+            <a href="">Learn More</a>
+            <a href="">Buy</a>
+          </div>
+        </article>
+        <article class="heart">
+          <span>New</span>
+          <h4>Watch</h4>
+          <span>Series 7</span>
+          <h5>Introducing our largest display yet.</h5>
+          <div>
+            <a href="">Learn More</a>
+            <a href="">Buy</a>
+          </div>
+        </article>
+        <article class="watch-black">
+          <span>New</span>
+          <h4>Watch</h4>
+          <span>Series 7</span>
+          <h5>Introducing our largest display yet.</h5>
+          <div>
+            <a href="">Learn More</a>
+            <a href="">Buy</a>
+          </div>
+        </article>
+        <article class="apple-card">
+          <span>New</span>
+          <h4>Watch</h4>
+          <span>Series 7</span>
+          <h5>Introducing our largest display yet.</h5>
+          <div>
+            <a href="">Learn More</a>
+            <a href="">Buy</a>
+          </div>
+        </article>
+        <article class="tv">
+          <span>New</span>
+          <h4>Watch</h4>
+          <span>Series 7</span>
+          <h5>Introducing our largest display yet.</h5>
+          <div>
+            <a href="">Learn More</a>
+            <a href="">Buy</a>
+          </div>
+        </article>
+      </section>
     </main>
   </body>
 </html>
