Fixed Search Icon Styling

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
       <nav>
         <ul>
-          <li>
+          <li class="show-on-small-screen">
             <a href="https://www.apple.com/" target="_blank">
               <img
                 src="https://www.apple.com/ac/globalnav/7/en_US/images/be15095f-5a20-57d0-ad14-cf4c638e223a/globalnav_apple_image__b5er5ngrzxqq_large.svg"
@@ -56,10 +56,10 @@
           <li>
             <a href="https://support.apple.com/" target="_blank">Support</a>
           </li>
-          <li>
-            <a>
-              <img src="./images/search-icon.png" alt="Search logo" />
-            </a>
+          <li class="search-icon">
+            <div>
+              <a href=""></a>
+            </div>
           </li>
           <li>
             <a>
@@ -74,13 +74,11 @@
     </header>
 
     <main>
-      <div class="shop-div">
-        <p class="shop-online">
-          Shop online and get Specialist help, free delivery, and more. Some of
-          our stores are offering limited services. Before you visit, please
-          check your store’s services
-        </p>
-      </div>
+      <p class="shop-online">
+        <a href="">Shop inline</a> and get Specialist help, free delivery, and
+        more. Some of our stores are offering limited services. Before you
+        visit, please check your <a href="">store’s services</a>
+      </p>
 
       <section class="full-width-section iphone-13-pro">
         <h1>iPhone 13 Pro</h1>
