--- a/index.html
+++ b/index.html
@@ -10,13 +10,12 @@
     <header>
       <nav>
         <ul>
-          <li class="show-on-small-screen">
-            <a href="https://www.apple.com/" target="_blank">
-              <img
-                src="https://www.apple.com/ac/globalnav/7/en_US/images/be15095f-5a20-57d0-ad14-cf4c638e223a/globalnav_apple_image__b5er5ngrzxqq_large.svg"
-                alt="Apple logo"
-            /></a>
+          <li class="apple-icon show-on-small-screen">
+            <div>
+              <a href="https://www.apple.com/" target="_blank"></a>
+            </div>
           </li>
+
           <li>
             <a href="https://www.apple.com/store" target="_blank">Store</a>
           </li>
@@ -61,13 +60,10 @@
               <a href=""></a>
             </div>
           </li>
-          <li>
-            <a>
-              <img
-                src="https://www.apple.com/ac/globalnav/7/en_US/images/be15095f-5a20-57d0-ad14-cf4c638e223a/globalnav_bag_image__yzte50i47ciu_large.svg"
-                alt="Bag Logo"
-              />
-            </a>
+          <li class="bag-icon">
+            <div>
+              <a href=""></a>
+            </div>
           </li>
         </ul>
       </nav>
@@ -84,8 +80,16 @@
         <h1>iPhone 13 Pro</h1>
         <h2>Oh. So. Pro</h2>
         <div>
-          <a href="">Learn More</a>
-          <a href="">Buy</a>
+          <a
+            href="https://www.apple.com/iphone-13-pro/key-features/"
+            target="_blank"
+            >Learn More</a
+          >
+          <a
+            href="https://www.apple.com/shop/buy-iphone/iphone-13-pro"
+            target="_blank"
+            >Buy</a
+          >
         </div>
       </section>
 
@@ -110,8 +114,12 @@
       <section class="multi">
         <article class="watch">
           <span>New</span>
-          <h4>Watch</h4>
-          <span>Series 7</span>
+          <div class="watch-logo">
+            <img
+              src="https://www.apple.com/v/home/aj/images/logos/watch-series-7/tile_watch_logo_lte__h7snssb7mqq2_medium.png"
+              alt="Watch Logo"
+            />
+          </div>
           <h5>Introducing our largest display yet.</h5>
           <div>
             <a href="">Learn More</a>
