--- a/index.html
+++ b/index.html
@@ -97,8 +97,16 @@
         <h1>iPhone 13</h1>
         <h2>Your new superpower</h2>
         <div>
-          <a href="">Learn More</a>
-          <a href="">Buy</a>
+          <a
+            href="https://www.apple.com/iphone-13/key-features/"
+            target="_blank"
+            >Learn More</a
+          >
+          <a
+            href="https://www.apple.com/shop/buy-iphone/iphone-13"
+            target="_blank"
+            >Buy</a
+          >
         </div>
       </section>
 
@@ -107,7 +115,11 @@
         <h1>Last-minute gift?</h1>
         <h1>You’re just in time.</h1>
         <div>
-          <a href="">Shop</a>
+          <a
+            href="https://www.apple.com/shop/gifts/valentines-day"
+            target="_blank"
+            >Shop</a
+          >
         </div>
       </section>
 
